# Appointments2

./: .env.example  .gitignore  README.md  app.js  app.py  auth.py  availability.py  calendar_sync.py  config.py  db.py  e APP_TIMEZONE on Vercel  google_calendar.py  index.html  mailer.py  notifications.py  owner.html  owner.js  pyproject.toml  requirements-dev.txt  requirements.txt  schema.sql  schema_postgres.sql  secret_crypto.py  start-public-server.bat  storage.py  temp_vercel_sdk_scan.json  vercel.json
api/: index.py
static/: app.js  index.html  owner.html  owner.js  styles.css
tests/: browser_audit.py  conftest.py  helpers.py  test_app_startup.py  test_auth_security.py  test_booking_flows.py  test_google_calendar.py  test_mailer.py  test_notifications.py  test_owner_management.py  test_platform_uploads_time.py
