[project]
name = "appointments2"
version = "1.0.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi==0.139.0",
    "uvicorn==0.51.0",
    "python-multipart==0.0.32",
    "tzdata==2026.3",
    "python-dotenv==1.2.2",
    "email-validator==2.3.0",
    "cryptography==49.0.0",
    "Pillow==12.3.0",
    "psycopg[binary]==3.3.4",
    "vercel==0.7.0"
]

[tool.vercel]
entrypoint = "app:app"